<resources>
    <string name="google_services_api_key">AIzaSyCkl7ejitQmVtgAYVvQm1P9Jmy5O13za0A</string>
    <string name="navigation_view_title_home">Trang chủ</string>
    <string name="navigation_view_title_list_post">Chuyến đã đăng</string>
    <string name="navigation_view_title_post">Đăng bài</string>
    <string name="navigation_view_title_list_request">Danh sách</string>
    <string name="navigation_view_title_profile">Tài khoản</string>
    <string name="dialog_no_connectivity_title">Thông báo</string>
    <string name="dialog_no_connectivity_positive">Tiếp tục</string>
    <string name="dialog_no_connectivity_msg">Không có kết nối Internet</string>
    <string name="dialog_expired_session_title">Thông báo</string>
    <string name="dialog_expired_session_msg">Phiên đăng nhập hết hạn. Đăng nhập lại</string>
    <string name="dialog_expired_session_positive">Tiếp tục</string>
    <string name="dialog_expired_session_negative">Hủy</string>
    <string name="dialog_refresh_token_error_positive">OK</string>
    <string name="no_connectivity_exception">Không có kết nối Internet!</string>
    <string name="server_error">Server quá tải hoặc có lỗi xảy ra. Vui lòng quay lại sau!</string>
    <string name="home_car_find_user">Xe tìm khách</string>
    <string name="home_user_find_car">Khách tìm xe</string>
    <string name="home_title_hot_cities">Tỉnh thành nổi bật</string>
    <string name="home_back_press">Nhấn back thêm một lần nữa để thoát</string>
    <string name="home_menu_revenue">revenue</string>
    <string name="home_menu_history">history</string>
    <string name="home_menu_support">support</string>
    <string name="home_menu_share">share</string>
    <string name="home_menu_rating">rating</string>
    <string name="home_menu_connect_facebook">connectfb</string>
    <string name="home_post_more">Xem thêm các chuyến đi khác ></string>
    <string name="login_text_welcome">Chào mừng đến với</string>
    <string name="login_text_welcomeTwo">Timdatxe</string>
    <string name="login_text_welcomeThree">Hệ thống tìm xe tiện chuyến lớn nhất Việt Nam</string>
    <string name="login_edittext_inputEmail">Số điện thoại hoặc Email</string>
    <string name="login_edittext_password">Mật khẩu</string>
    <string name="login_btn_name">Đăng nhập</string>
    <string name="login_btn_quenmatkhau">Quên mật khẩu</string>
    <string name="login_btn_regis">Đăng ký</string>
    <string name="register_title">Đăng ký tài khoản</string>
    <string name="login_textView">Đăng nhập bằng</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="layout_no_result">Chưa có chuyến đi phù hợp</string>
    <string name="update_info_title_01">Vui lòng cung cấp một số thông tin dưới đây</string>
    <string name="update_info_title_name">Tên đầy đủ</string>
    <string name="update_info_hint_name">Ví dụ Nguyễn Văn A</string>
    <string name="update_info_title_email">Email</string>
    <string name="update_info_hint_email">Ví dụ user-0@gmail.com</string>
    <string name="update_info_title_phone">Số điện thoại</string>
    <string name="update_info_title_date">Ngày sinh</string>
    <string name="update_info_title_gender">Giới tính</string>
    <string name="update_info_condition">Bạn đã đồng ý với điều khoản dịch vụ và chính sách bảo mật</string>
    <string name="update_info_btn_login">Đăng nhập</string>
    <string-array name="gender_info">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="update_info_toolbar_title">Cập nhật thông tin</string>
    <string name="tvLoading">Loading</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="regis_tv_name">Họ và tên <font color="#D80C4F">(*)</font>
    </string>
    <string name="regis_tv_email">Email <font color="#D80C4F">(*)</font>
    </string>
    <string name="regis_tv_password">Mật khẩu <font color="#D80C4F">(*)</font>
    </string>
    <string name="regis_tv_confirm_password">Xác nhận mật khẩu <font color="#D80C4F">(*)</font>
    </string>
    <string name="regis_tv_phone">Số điện thoại <font color="#D80C4F">(*)</font>
    </string>
    <string name="regis_tv_description_passowrd">Mật khẩu phải bao gồm ít nhất 8 ki tự, số, chữ hoa, chữ thường và kí tự đặc biệt</string>
    <string name="regis_tv_description_checkbox">Đồng ý với các điều khoản và chính sách</string>
    <string name="toolbar_title_change_password">ĐỔI MẬT KHẨU</string>
    <string name="change_password_old">Mật khẩu cũ</string>
    <string name="change_password_new">Mật khẩu mới</string>
    <string name="change_password_retype">Xác nhận mật khẩu mới</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="change_password_old_no_type">Vui lòng nhập mật khẩu cũ!</string>
    <string name="change_password_new_no_type">Vui lòng nhập mật khẩu mới!</string>
    <string name="change_password_retype_no_type">Vui lòng nhập xác nhận mật khẩu mới!</string>
    <string name="change_password_old_error_type">Mật khẩu cũ không đúng định dạng!</string>
    <string name="change_password_new_error_type">Mật khẩu mới không đúng định dạng!</string>
    <string name="change_password_retype_error_type">Mật khẩu nhập lại không đúng định dạng!</string>
    <string name="change_password_not_exactly">Xác nhận mật khẩu không khớp!</string>
    <string name="confirm_tv_inputCode">Nhập mã xác thực</string>
    <string name="confirm_tv_description">Hệ thống đã gửi mã xác thực về điện thoại. Nhập mã để hoàn tất đăng ký</string>
    <string name="confirm_tv_resend">Nếu không nhận được mã xác thực</string>
    <string name="confirm_btn_regis">Xác thực</string>
    <string name="tv_forgot_description">Nhập Email hoặc số điện thoại đăng ký tài khoản Timdatxe của bạn: </string>
    <string name="et_forgot">Số điện thoại hoặc địa chỉ Email</string>
    <string name="tv_forgot_timdatxe">Timdatxe</string>
    <string name="tv_forgot_timdatxe_description">Hệ thống tìm đặt xe lớn nhất Việt Nam</string>
    <string name="tv_forgot_toolbar_title">ĐẶT LẠI MẬT KHẨU</string>
    <string name="faqs_title">Các câu hỏi thường gặp (FAQ)</string>
    <string name="tv_update_password_description">Hệ thống đã gửi mã xác thực Nhập mã xác thực để đổi mật khẩu</string>
    <string name="tv_update_password_resend">Nếu không nhận được mã xác thực</string>
    <string name="alert_message_token_to_phone">Mã đặt lại mật khẩu đã được gửi đến điện thoại!</string>
    <string name="alert_message_token_to_email">Mã đặt lại mật khẩu đã được gửi đến Email!</string>
    <string name="alert_message_title">Timdatxe</string>
    <string name="facebook_app_id">366213034009507</string>
    <string name="fb_login_protocol_scheme">fb366213034009507</string>
    <string name="driver_list_request_toolbar_title">Danh sách yêu cầu</string>
    <string name="driver_list_post_toolbar_title">Danh sách chuyến đã đăng</string>
    <string name="user_profile_number_trip">Số chuyến đã đi:</string>
    <string name="user_profile_detail">Thông tin chi tiết</string>
    <string name="user_profile_full_name">Họ Tên:</string>
    <string name="user_profile_email">Email:</string>
    <string name="user_profile_phone_number">Số Điện Thoại:</string>
    <string name="user_profile_date_of_birth">Ngày Sinh:</string>
    <string name="user_profile_gender">Giới Tính :</string>
    <string name="user_profile_address">Địa Chỉ: </string>
    <string name="user_profile_toolbar_title">Hồ sơ người dùng</string>
    <string name="user_profile_des">Mô tả bản thân:</string>
    <string name="user_update_profile_toolbar">Chỉnh sửa hồ sơ</string>
    <string name="user_update_profile_choose_avatar">Chọn ảnh</string>
    <string name="user_update_profile_title">Thông tin chi tiết</string>
    <string name="user_update_profile_name">Họ tên:</string>
    <string name="user_update_profile_email">Email:</string>
    <string name="user_update_profile_phone">Số điện thoại:</string>
    <string name="user_update_profile_dob">Ngày sinh:</string>
    <string name="user_update_profile_gender">Giới tính:</string>
    <string name="user_update_profile_address">Địa chỉ:</string>
    <string name="user_update_profile_des">Mô tả bản thân:</string>
    <string-array name="array_gender">
        <item>Giới tính</item>
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="request_read_external_storeage">Chưa cấp quyền truy cập bộ nhớ</string>
    <string name="driver_profile_toolbar_title">Hồ sơ tài xế</string>
    <string name="driver_profile_number_star">Số sao:</string>
    <string name="driver_profile_license">Bằng lái xe</string>
    <string name="driver_profile_manage_car">Quản lý xe</string>
    <string name="driver_profile_suggest">Ý kiến khách hàng</string>
    <string name="driver_profile_review_customer">Khách hàng:</string>
    <string name="driver_profile_review_rating">Đánh giá:</string>
    <string name="driver_profile_review_rating_date">Ngày đánh giá:</string>
    <string name="user_request_detail_cancel_booking_step_one_title">Hủy chuyến đi đã đặt</string>
    <string name="user_request_detail_cancel_booking_step_one_btn">Tiếp tục</string>
    <string name="user_request_detail_cancel_booking_step_two_policy_title">Chính sách hủy chuyến</string>
    <string name="user_request_detail_cancel_booking_step_two_time_title">Thời gian</string>
    <string name="user_request_detail_cancel_booking_step_two_refund_title">Mức hoàn phí</string>
    <string name="user_request_detail_cancel_booking_step_two_before_5_days">Trước 5 ngày</string>
    <string name="user_request_detail_cancel_booking_step_two_before_3_5_days">Trước 3-5 ngày</string>
    <string name="user_request_detail_cancel_booking_step_two_before_1_3_days">Trước 1-3 ngày</string>
    <string name="user_request_detail_cancel_booking_step_two_before_1_day">Trước 1 ngày</string>
    <string name="user_request_detail_cancel_booking_step_two_refund_100">Hoàn 100% phí</string>
    <string name="user_request_detail_cancel_booking_step_two_refund_70">Hoàn 70% phí</string>
    <string name="user_request_detail_cancel_booking_step_two_refund_50">Hoàn 50% phí</string>
    <string name="user_request_detail_cancel_booking_step_two_refund_0">Không hoàn phí</string>
    <string name="user_request_detail_cancel_booking_step_two_condition">Ngoài ra Tài xế hoặc User hủy phải chịu thêm phí chuyển khoản hoặc các phí phát sinh khác</string>
    <string name="user_request_detail_cancel_booking_step_two_date_starting">Ngày khởi hành</string>
    <string name="user_request_detail_cancel_booking_step_two_date_current">Ngày hiện tại</string>
    <string name="user_request_detail_cancel_booking_step_two_date_time_remain">Thời gian còn lại</string>
    <string name="user_request_detail_cancel_booking_step_two_date_money_refund">Số tiền được hoàn</string>
    <string name="user_post_detail_title_starting_point">Điểm xuất phát:</string>
    <string name="user_post_detail_title_ending_point">Điểm kết thúc:</string>
    <string name="user_post_detail_title_distance">Khoảng cách:</string>
    <string name="user_post_detail_title_time">Thời gian:</string>
    <string name="user_post_detail_title_time_estimate">Thời gian dự kiến (h):</string>
    <string name="user_post_detail_title_number_seat">Số ghế đặt:</string>
    <string name="user_post_detail_title_status">Trạng thái:</string>
    <string name="user_post_detail_title_reason">Nguyên nhân:</string>
    <string name="user_post_detail_title_requirement">Yêu cầu chuyến đi:</string>
    <string name="user_post_detail_btn_edit">Chỉnh sửa chuyến đi</string>
    <string name="user_post_detail_list_driver">Danh sách tài xế ứng tuyển</string>
</resources>