<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home_selected"
        android:title="@string/navigation_view_title_home" />
    <item
        android:id="@+id/item_list_post"
        android:icon="@drawable/ic_news_selected"
        android:title="@string/navigation_view_title_list_post" />
    <item
        android:id="@+id/item_post"
        android:icon="@drawable/ic_post_news"
        android:title="@string/navigation_view_title_post" />
    <item
        android:id="@+id/item_list_request"
        android:icon="@drawable/ic_list_selected"
        android:title="@string/navigation_view_title_list_request" />
    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_profile_selected"
        android:title="@string/navigation_view_title_profile" />
</menu>