<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_10dp">

    <ImageView
        android:id="@+id/imv_cancel_step_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/margin_8_dp"
        android:paddingEnd="@dimen/margin_8_dp"
        android:src="@drawable/ic_close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_logo_direct" />

    <TextView
        android:id="@+id/tv_title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:text="@string/user_request_detail_cancel_booking_step_one_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_one"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_4_dp"
        android:text="@string/user_request_detail_cancel_booking_step_two_policy_title"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_two"
        android:layout_marginTop="@dimen/margin_4_dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/DialogBackgroundCancelBookingActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_time_title" />

            <TextView
                style="@style/DialogBackgroundCancelBookingActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_refund_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_before_5_days" />

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_refund_100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_before_3_5_days" />

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_refund_70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_before_1_3_days" />

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_refund_50" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_before_1_day" />

            <TextView
                style="@style/DialogBackgroundCancelBookingNotActive"
                android:text="@string/user_request_detail_cancel_booking_step_two_refund_0" />
        </LinearLayout>
    </LinearLayout>
    " />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_table"
        android:layout_marginTop="@dimen/margin_4_dp"
        android:padding="@dimen/element_padding_normal"
        android:text="@string/user_request_detail_cancel_booking_step_two_condition"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_14"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/ll_detail_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_condition"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                style="@style/DialogTitleTitleCancelBooking"
                android:text="@string/user_request_detail_cancel_booking_step_two_date_starting" />

            <TextView
                android:id="@+id/tv_starting_date"
                style="@style/DialogDetailCancelBooking"
                tools:text="11:30 AM - 09/11/2019" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                style="@style/DialogTitleTitleCancelBooking"
                android:text="@string/user_request_detail_cancel_booking_step_two_date_current" />

            <TextView
                android:id="@+id/tv_current_date"
                style="@style/DialogDetailCancelBooking"
                tools:text="11:30 AM - 09/11/2019" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                style="@style/DialogTitleTitleCancelBooking"
                android:text="@string/user_request_detail_cancel_booking_step_two_date_time_remain" />

            <TextView
                android:id="@+id/tv_time_remain"
                style="@style/DialogDetailCancelBooking"
                tools:text="11:30 AM - 09/11/2019" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <TextView
                style="@style/DialogTitleTitleCancelBooking"
                android:text="@string/user_request_detail_cancel_booking_step_two_date_money_refund" />

            <TextView
                android:id="@+id/tv_money_refund"
                style="@style/DialogDetailCancelBooking"
                tools:text="11:30 AM - 09/11/2019" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_8_dp"
        android:layout_below="@id/ll_detail_cancel"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:background="@color/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginTop="@dimen/margin_16_dp"
        android:background="@drawable/bg_cancel_booking_step_one"
        android:padding="@dimen/content_padding_normal">

        <TextView
            android:id="@+id/btn_step_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_cancel_booking_step_one"
            android:gravity="center"
            android:padding="@dimen/element_padding_normal"
            android:text="@string/user_request_detail_cancel_booking_step_one_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>